code/human_written_tests/WebAssembly/processed_control_flow_validation/test_block_53.wast
(assert_invalid
  (module (func $type-value-unreached-select-i64-i32 (result i64)
    (block (result i32) (select (unreachable) (unreachable) (unreachable)))
  ))
  "type mismatch"
)